syntax = "proto3";

option go_package = "github.com/metal-stack/metal-api/pkg/proto/v1";

package v1;

import "v1/common.proto";
import "v1/identifiable.proto";
import "google/protobuf/wrappers.proto";

service PartitionService {
    rpc Create(PartitionCreateRequest) returns (PartitionResponse);
    rpc Update(PartitionUpdateRequest) returns (PartitionResponse);
//    rpc Delete(PartitionDeleteRequest) returns (PartitionResponse);
    rpc Get(PartitionGetRequest) returns (PartitionResponse);
    rpc Find(PartitionFindRequest) returns (PartitionListResponse);
    rpc List(PartitionListRequest) returns (PartitionListResponse);
}

// a partition has a distinct location in a data center, individual entities belong to a partition
message Partition {
    v1.Common common = 1;
    google.protobuf.StringValue ImageURL = 2;    // the url to download the initrd for the boot image
    google.protobuf.StringValue KernelURL = 3;   // the url to download the kernel for the boot image
    google.protobuf.StringValue CommandLine = 4; // the cmdline to the kernel for the boot image
    google.protobuf.StringValue mgmtServiceAddress = 5;        // the address to the management service of this partition
    google.protobuf.UInt32Value privateNetworkPrefixLength = 6; // the length of private networks for the machine's child networks in this partition, minimum 16, maximum 30, default 22
}

message PartitionCreateRequest {
    Partition partition = 1;
}

message PartitionUpdateRequest {
    Partition partition = 1;
}

//message PartitionDeleteRequest {
//    v1.Identifiable identifiable = 1;
//}

message PartitionGetRequest {
    v1.Identifiable identifiable = 1;
}

message PartitionFindRequest {
    v1.FindCriteria findCriteria = 1;
}

message PartitionResponse {
    Partition partition = 1;
}

message PartitionListRequest {}

message PartitionListResponse {
    repeated PartitionResponse partitions = 1;
}

message ServerCapacity {
    string size = 1;      // the size of the server
    uint64 total = 2;     // total amount of servers with this size
    uint64 free = 3;      // free servers with this size
    uint64 allocated = 4; // allocated servers with this size
    uint64 faulty = 5;    // servers with issues with this size
}

message PartitionCapacity {
    v1.Common common = 1;
    repeated ServerCapacity serverCapacities = 2; // servers available in this partition
}
